--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "sass": "^1.89.2",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "rollup": "3.29.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -47,5 +48,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
-  }
+  },
+  "resolutions": {
+  "@rollup/rollup-linux-x64-gnu": "file:empty-module"
+},
 }
